--- a/aplicacoes/produtos/olho_preco_celulares/Ionic3/src/pages/oportunidade-lista/oportunidade-lista.html
+++ b/aplicacoes/produtos/olho_preco_celulares/Ionic3/src/pages/oportunidade-lista/oportunidade-lista.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
   <ion-navbar color="titulo">
-    <ion-title>OportunidadeLista</ion-title>
+    <ion-title>Oportunidades do Dia</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -18,24 +18,53 @@
       <ion-thumbnail item-start>
         <img src="https://images-americanas.b2w.io/produtos/01/00/offers/01/00/item/133728/1/133728151_1GG.png">
       </ion-thumbnail>
-      <h2 text-wrap>Smartphone Samsung Galaxy J6</h2>
-      <p text-end>Ponto Frio</p>
-      <p text-end>R$ 859,99</p>
-      <p class="felicidade">Melhor preço em 28 dias</p>
+      <h2 text-wrap>Samsung Galaxy J6</h2>
+      <p >Americanas.com</p>
+      <p text-end>R$ 829,99</p>
+      <p text-end><span text-wrap class="classe-teste">Preço 8,3% abaixo da média</span></p>
     </ion-item>
 
     <ion-item padding>
       <ion-thumbnail item-start>
-        <img src="https://images-americanas.b2w.io/produtos/01/00/offers/01/00/item/133728/1/133728151_1GG.png">
+        <img src="https://www.pontofrio-imagens.com.br/TelefoneseCelulares/Smartphones/Android/13279095/1000969877/smartphone-samsung-galaxy-j8-4gb-ram-camera-traseira-dupla-camera-frontal-16mp-dual-chip-android-8-0-64gb-preto-tela-infinita-de-60-13279095.jpg">
       </ion-thumbnail>
-      <h2 text-wrap>Smartphone Samsung Galaxy J6</h2>
-      <p text-end>Ponto Frio</p>
-      <p text-end>R$ 859,99</p>
-      <p color="felicidade">Melhor preço em 28 dias</p>
+      <h2 text-wrap>Samsung Galaxy J8</h2>
+      <p >Ponto Frio</p>
+      <p text-end>R$ 1.149,00</p>
+      <p text-end><span text-wrap class="classe-teste">Preço 2,7% abaixo da média</span></p>
     </ion-item>
 
 
+    <ion-item padding>
+      <ion-thumbnail item-start>
+        <img src="https://a-static.mlcdn.com.br/210x210/smartphone-motorola-moto-e5-32gb-platinum-4g-quad-core-2gb-ram-tela-57-cam-13mp-selfie-5mp/magazineluiza/155543400/0a8a5ca2170d3ce4b53c2642eaca0145.jpg">
+      </ion-thumbnail>
+      <h2 text-wrap>Motorola Moto E5 Play</h2>
+      <p >Magazine Luiza</p>
+      <p text-end>R$ 659,99</p>
+      <p text-end><span text-wrap class="classe-teste">Preço 5,9% abaixo da média</span></p>
+    </ion-item>
+
+    <ion-item padding>
+      <ion-thumbnail item-start>
+        <img src="https://www.extra-imagens.com.br/TelefoneseCelulares/Smartphones/Android/11051280/810661578/smartphone-lg-k10-tv-power-indigo-com-32gb-dual-chip-tela-de-55-hd-tv-digital-4g-android-7-0-camera-13mp-e-processador-octa-core-de-1-5-ghz-11051280.jpg">
+      </ion-thumbnail>
+      <h2 text-wrap>LG K10</h2>
+      <p >Extra.com</p>
+      <p text-end>R$ 829,99</p>
+      <p text-end><span text-wrap class="classe-teste">Preço 2,1% abaixo da média</span></p>
+    </ion-item>
+
   
+    <ion-item padding>
+      <ion-thumbnail item-start>
+        <img src="https://www.pontofrio-imagens.com.br/TelefoneseCelulares/Smartphones/Android/13279095/1000969877/smartphone-samsung-galaxy-j8-4gb-ram-camera-traseira-dupla-camera-frontal-16mp-dual-chip-android-8-0-64gb-preto-tela-infinita-de-60-13279095.jpg">
+      </ion-thumbnail>
+      <h2 text-wrap>Samsung Galaxy J8</h2>
+      <p >Ponto Frio</p>
+      <p text-end>R$ 1.149,00</p>
+      <p text-end><span text-wrap class="classe-teste">Preço 2,7% abaixo da média</span></p>
+    </ion-item>
   </ion-list>
 
 
