--- a/aplicacoes/produtos/olho_preco_celulares/Ionic3/src/pages/oportunidade-detalhe/oportunidade-detalhe.html
+++ b/aplicacoes/produtos/olho_preco_celulares/Ionic3/src/pages/oportunidade-detalhe/oportunidade-detalhe.html
@@ -5,11 +5,65 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar>
-    <ion-title>OportunidadeDetalhe</ion-title>
+  <ion-navbar color="titulo">
+    <ion-title>Histórico de Preços</ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content padding class="quadroTela">
 
+  <ion-card>
+    <ion-card-title>
+        LG K10
+    </ion-card-title>
+    <ion-card-content>
+        <img src="https://www.extra-imagens.com.br/TelefoneseCelulares/Smartphones/Android/11051280/810661578/smartphone-lg-k10-tv-power-indigo-com-32gb-dual-chip-tela-de-55-hd-tv-digital-4g-android-7-0-camera-13mp-e-processador-octa-core-de-1-5-ghz-11051280.jpg">
+        <p text-end>Americanas.com</p>
+      </ion-card-content>
+  </ion-card>
+
+
+  <ion-grid class="tabela">
+    <ion-row class="linhaTitulo">
+      <ion-col col-6 >Data</ion-col>
+      <ion-col col-6>Preço (R$)</ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col col-6>13/03/2019</ion-col>
+      <ion-col col-6>859,00</ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col col-6>12/03/2019</ion-col>
+      <ion-col col-6>859,00</ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col col-6>11/03/2019</ion-col>
+      <ion-col col-6>859,00</ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col col-6>10/03/2019</ion-col>
+      <ion-col col-6>889,00</ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col col-6>09/03/2019</ion-col>
+      <ion-col col-6>889,00</ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col col-6>08/03/2019</ion-col>
+      <ion-col col-6>889,00</ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col col-6>07/03/2019</ion-col>
+      <ion-col col-6>879,00</ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col col-6>06/03/2019</ion-col>
+      <ion-col col-6>879,00</ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col col-6>05/03/2019</ion-col>
+      <ion-col col-6>879,00</ion-col>
+    </ion-row>
+
+  </ion-grid>
 </ion-content>
